Disable Checkbox for Lower Limit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="26dp"
                     android:text="Masala"
+                    android:enabled="false"
                     android:textSize="16sp" />
 
                 <CheckBox
@@ -69,6 +70,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="26dp"
                     android:text="Ginger"
+                    android:enabled="false"
                     android:textSize="16sp" />
 
 
@@ -100,7 +102,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
-                        android:text="1"
+                        android:text="0"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
@@ -151,6 +153,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="26dp"
                     android:text="Whipped Creame"
+                    android:enabled="false"
                     android:textSize="16sp" />
 
                 <CheckBox
@@ -159,6 +162,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="26dp"
                     android:text="Chocolate"
+                    android:enabled="false"
                     android:textSize="16sp" />
 
 
@@ -190,7 +194,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
-                        android:text="1"
+                        android:text="0"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
